update chat service

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,6 @@
-# Environment variables for Digital Yapper Backend
+PYTHONDONTWRITEBYTECODE=1
 OPENAI_API_KEY=your_openai_api_key_here
-
-# Database
 DATABASE_URL=sqlite+aiosqlite:///./conversations.db
-
-# Development settings
 ENVIRONMENT=development
 
 # TODO: Microsoft Auth (to be implemented)
